# mcp-apps-oauth-demo

./: .gitignore  README.md
auth-server/: Dockerfile  FIRESTORE_SETUP.md  README.md  deploy.sh  firebase.json  pyproject.toml
auth-server/mcp_simple_auth/: auth_server.py  firestore_auth_provider.py  firestore_client.py  simple_auth_provider.py
mcp-server/: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml
mcp-server/mcp_simple_auth/: server.py
mcp-server/widget/: build.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mcp-server/widget/assets/: tool-output.css  tool-output.html  tool-output.js
mcp-server/widget/src/tool-output/: index.jsx  widget.css  widget.jsx
